// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/admin/users GET /admin/users lists invites 1`] = `
Array [
  Object {
    "accepted": false,
    "created_at": Any<String>,
    "deleted_at": null,
    "id": "memberInvite",
    "metadata": null,
    "role": "member",
    "token": Any<String>,
    "updated_at": Any<String>,
    "user_email": "invite-member@test.com",
  },
  Object {
    "accepted": false,
    "created_at": Any<String>,
    "deleted_at": null,
    "id": "adminInvite",
    "metadata": null,
    "role": "admin",
    "token": Any<String>,
    "updated_at": Any<String>,
    "user_email": "invite-admin@test.com",
  },
]
`;

exports[`/admin/users GET /admin/users lists users 1`] = `
Array [
  Object {
    "api_token": "test_token",
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "admin@medusa.js",
    "first_name": null,
    "id": "admin_user",
    "last_name": null,
    "metadata": null,
    "role": "admin",
    "updated_at": Any<String>,
  },
  Object {
    "api_token": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "member@test.com",
    "first_name": "member",
    "id": "member-user",
    "last_name": "user",
    "metadata": null,
    "role": "member",
    "updated_at": Any<String>,
  },
]
`;

exports[`/admin/users GET /admin/users lists users and invites which are not yet accepted 1`] = `
Array [
  Object {
    "api_token": "test_token",
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "admin@medusa.js",
    "first_name": null,
    "id": "admin_user",
    "last_name": null,
    "metadata": null,
    "role": "admin",
    "updated_at": Any<String>,
  },
  Object {
    "api_token": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "member@test.com",
    "first_name": "member",
    "id": "member-user",
    "last_name": "user",
    "metadata": null,
    "role": "member",
    "updated_at": Any<String>,
  },
  Object {
    "accepted": false,
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "invite-member@test.com",
    "id": "memberInvite",
    "isInvite": true,
    "metadata": null,
    "role": "member",
    "token": Any<String>,
    "updated_at": Any<String>,
    "user_email": "invite-member@test.com",
  },
  Object {
    "accepted": false,
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "invite-admin@test.com",
    "id": "adminInvite",
    "isInvite": true,
    "metadata": null,
    "role": "admin",
    "token": Any<String>,
    "updated_at": Any<String>,
    "user_email": "invite-admin@test.com",
  },
]
`;

exports[`/admin/users GET /admin/users lists users without invites 1`] = `
Array [
  Object {
    "api_token": "test_token",
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "admin@medusa.js",
    "first_name": null,
    "id": "admin_user",
    "last_name": null,
    "metadata": null,
    "role": "admin",
    "updated_at": Any<String>,
  },
  Object {
    "api_token": null,
    "created_at": Any<String>,
    "deleted_at": null,
    "email": "member@test.com",
    "first_name": "member",
    "id": "member-user",
    "last_name": "user",
    "metadata": null,
    "role": "member",
    "updated_at": Any<String>,
  },
]
`;

exports[`/admin/users GET /admin/users returns user by id 1`] = `
Object {
  "api_token": "test_token",
  "created_at": Any<String>,
  "deleted_at": null,
  "email": "admin@medusa.js",
  "first_name": null,
  "id": "admin_user",
  "last_name": null,
  "metadata": null,
  "role": "admin",
  "updated_at": Any<String>,
}
`;

exports[`/admin/users POST /admin/users creates a user 1`] = `
Object {
  "api_token": null,
  "created_at": Any<String>,
  "deleted_at": null,
  "email": "test@test123.com",
  "first_name": null,
  "id": StringMatching /\\^usr_\\*/,
  "last_name": null,
  "metadata": null,
  "role": "member",
  "updated_at": Any<String>,
}
`;

exports[`/admin/users POST /admin/users updates a user 1`] = `
Object {
  "api_token": null,
  "created_at": Any<String>,
  "deleted_at": null,
  "email": "member@test.com",
  "first_name": "karl",
  "id": "member-user",
  "last_name": "user",
  "metadata": null,
  "password_hash": null,
  "role": "member",
  "updated_at": Any<String>,
}
`;
